@@ -13,6 +13,7 @@
 			<_category>Chemistry</_category>
 			<functions textdomain="gchemutils-@GCU_API_VER@">
             	<function name="molarmass"/>
+            	<function name="monoisotopicmass"/>
 			</functions>
 		</service>
 	</services> 
